# CamMana

./: .env  .env.example  .gitignore  README.md  app.py  bootstrap.ps1  build.py  download_models.py  main.py  pyproject.toml  scripts.sh  setup.ps1  task.md  test_inpainting.py  test_inpainting_debug.py  test_refined_workflow.py
backend/: __init__.py  api.py  camera.py  config.py  info_detect.py  logging_config.py  schemas.py  server.py  settings.py  streamer.py
backend/api/: __init__.py  _shared.py  cameras.py  checkin.py  checkout.py  config.py  detection.py  file_sync.py  history.py  pipeline.py  schedule.py  sync.py  system.py  user.py
backend/camera/: api.py  capture.py  config_api.py  connection.py  control.py  logic.py  state.py
backend/camera_config/: __init__.py  camera.py  streamer.py
backend/car_process/: __init__.py
backend/car_process/config/: __init__.py  camera_type_config.py  function_config.py  location_config.py
backend/car_process/core/: __init__.py  checkin_service.py  detection_client.py  detection_service.py  orchestrator.py  storage_manager.py
backend/car_process/functions/: __init__.py  box_detection.py  car_detection.py  color_detection.py  plate_detection.py  volume_detection.py  wheel_detection.py
backend/ci_cd/: __init__.py  api_check.py  camera_check.py  config_check.py  data_check.py  model_check.py  package_check.py  runner.py
backend/ci_cd/sample_data/: README.md  sync_config.json
backend/data_process/: __init__.py  _common.py  _sync.py  cameras.py  captured_cars.py  config.py  csv_storage.py  csv_utils.py  db.py  history.py  registered_cars.py  report.py  storage_config.py  utils.py
backend/data_process/camera_type/: api.py  logic.py
backend/data_process/history/: __init__.py  (+2 more)
backend/detect_car/: __init__.py  car_detect.py  detection_service.py  info_detect.py  volume_detect.py
backend/model_process/: config.py  control.py
backend/sync_process/: __init__.py
backend/tests/: __init__.py  test_api_structure.py  test_backend_refactor.py  test_registered_cars.py
backend/utils/: inpainting.py
backend/workflow/: checkin.py  checkout.py  config.py
database/: cammana.db  sync_config.json  system_config.json
database/calibration/: calib_side.json  calib_topdown.json
database/schedule/: CCN_template.xlsx
database/schema/: schema.sql
docs/: ARCHITECTURE.md  BACKEND_FOLDER_STRUCTURE.md  BUILD_STRATEGY.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DATABASE_RESTRUCTURE.md  DEPLOYMENT_GUIDE.md  FILES_TO_DELETE.md  IMPLEMENTATION_SUMMARY.md  LOCATION_TAGS.md  MIGRATION_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START_PIPELINE.md  README_LOCATION_TAGS.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN_CAR_PROCESS.md  REGISTERED_CARS_UPDATE.md  REMOVAL_PLAN.md  SOLUTION_SUMMARY.md  SYNC_TESTING_GUIDE.md  TAGS_SIMPLIFIED.md  UI_UX_Design_Summary.md  api_endpoints.md  backend_api.md  backend_api_docs.md  cammana_technical_documentation.md  database_design.md  frontend_doc.md  multi_function_detection_architecture.md  volume_integrate_api.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.js  layout.tsx  page.js  page.tsx
frontend/patches/: next+16.1.1.patch
production/: build.py
production/config/: installer.iss
scripts/: test_checkin.py
tests/: test_sync.py  test_sync_simulation.py
(+71 files in other folders)
