[project]
name = "cammana"
version = "2.0.0"
description = "ONVIF Camera Manager - Desktop Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "onvif-zeep>=0.2.12",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pywebview>=5.3.0",
    "pydantic>=2.10.0",
    "pyinstaller>=6.0.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "ultralytics>=8.3.250",
    "httpx>=0.28.1",
    "apscheduler>=3.11.2",
    "fpdf2>=2.8.5",
    "matplotlib>=3.10.8",
    "python-jose>=3.5.0",
    "bcrypt==3.2.0",
    "passlib>=1.7.4",
    "modal>=1.3.1",
    "zeroconf>=0.148.0",
]

[project.scripts]
cammana = "app:main"


