[project]
name = "cammana"
version = "2.0.1"
description = "ONVIF Camera Manager - Desktop Application"
authors = [{ name = "Sang.lt" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "numpy>=2.2.0,<2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.21",
    # GUI
    "PySide6>=6.6.0",
    # Data & Config
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
    # AI/ML - ONNX Runtime (lightweight, no PyTorch!)
    "onnxruntime>=1.18.0",
    # Camera & Network
    "onvif-zeep>=0.2.12",
    "zeroconf>=0.148.0",
    # Reports
    "fpdf2>=2.8.5",
    "matplotlib>=3.9.0",
    # Auth & Scheduling
    "python-jose>=3.5.0",
    "bcrypt==3.2.0",
    "passlib>=1.7.4",
    "apscheduler>=3.11.2",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
dev = [
    "nuitka>=2.8.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "app.py"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "nuitka>=2.8.10",
    "tqdm>=4.67.1",
]

[project.scripts]
cammana = "app:main"
